--- a/templates/movie_2.html
+++ b/templates/movie_2.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Movie</title>
 </head>
-<body> <h1>civil war</h1>
-<img src="http://media.comicbook.com/2016/04/civil-war-cap-tony-179110.jpg" />
+<body> <h1>{{ title }}</h1>
+<img src="{{ img }}" />
 
 </body>
 </html>
